infra/app-a/app-a-np.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-frontend
  namespace: team-a-app1-backend
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: team-a-app1-frontend
        - podSelector: {}
  policyTypes:
    - Ingress
